fix(gestion-especialidades): align catalog contract with PP-51/52 CatalogoItem format
- Return CatalogoItemDTO {valor, etiqueta} instead of List<String>
- Rename endpoint /zonas-cobertura to /zonas (PP-52 standard)